--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,14 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath 'se.transmode.gradle:gradle-docker:1.2'
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'application'
+apply plugin: 'docker'
 
 apply from: "$rootDir/gradle/versioning.gradle"
 
@@ -29,7 +32,9 @@ jar {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion",
             'org.springframework.cloud:spring-cloud-starter-hystrix-dashboard',
-            'org.springframework.cloud:spring-cloud-starter-eureka-server'
+            'org.springframework.cloud:spring-cloud-starter-eureka-server',
+            'io.springfox:springfox-swagger2:2.7.0',
+            'io.springfox:springfox-swagger-ui:2.7.0'
 }
 
 defaultTasks 'clean', 'bootRepackage'
@@ -50,4 +55,8 @@ task releaseZip(type: Zip, dependsOn: 'bootRepackage') {
     include '*/*'
     archiveName "JAlgoArena-Eureka-${version}.zip"
     destinationDir(file('build/libs'))
+}
+
+docker {
+    baseImage "java:8"
 }
